adding stuff to fix

--- a/templates/checkResults.html
+++ b/templates/checkResults.html
@@ -21,7 +21,9 @@
                     &nbsp;
                 </td>
                 <td>
+                    <form>
                     <input type="submit" value="Record Score">
+                    </form>
                 </td>
             </tr>
         </table>
